# apophenic

./: CMakeLists.txt  Readme.md  conanfile.py
apophenic/: MVC.hxx  StateAutomaton.hxx
sources/: CMakeLists.txt
sources/apophenic/: Introspect.hxx  MVC.hxx  StateAutomaton.hxx
sources/tests/: test_automaton.cxx  test_introspect.cxx  test_mvc.cxx
tests/: test_mvc.cxx
